--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Notes":"see appsettings.development for overiding config"
 
 }
